some jquery ui fixes

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -12,7 +12,7 @@
         <link rel="mask-icon" href="/static/safari-pinned-tab.svg" />
         <link rel="stylesheet" href="/static/css/reset.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/node_modules/jquery-ui-dist/jquery-ui.min.css" />
-        <link rel="stylesheet" href="/static/node_modules/jstree/dist/themes/default/style.min.css" />
+        <link rel="stylesheet" href="/static/css/uitheme.css" />
         <link rel="stylesheet" href="/static/css/style.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/css/color.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/css/images.css?v={{ config['VERSION'] }}" />
