--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -22,7 +22,7 @@
 
         <script src="/static/node_modules/jquery/dist/jquery.min.js"></script>
         <script src="/static/node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
-        <script src="/static/node_modules/datatables.net/js/jquery.datatables.min.js"></script>
+        <script src="/static/node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
         <script src="/static/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
         <script src="/static/node_modules/jquery-validation/dist/jquery.validate.min.js"></script>
         <script src="/static/node_modules/jstree/dist/jstree.min.js"></script>
