--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -20,7 +20,7 @@
             <a href="{{ url_for('download_sql', filename=file_data['file']) }}">{{ _('download')|uc_first }}</a>
         </p>
     {% endif %}
-    {% if file_data['backup_too_old'] %}
+    {% if file_data['backup_too_old'] and not config['IS_UNIT_TEST'] %}
         <p>
             {{ _('There seems to be no recent backup, please make one') }}
             <a href="{{ url_for('export_sql') }}">{{ _('here') }}</a>.
