Subunits on map: new map icons for super, subs, siblings and show them

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -3,6 +3,9 @@
     var geoNamesUsername = '{{ config['GEONAMES_USERNAME'] }}';
     var thunderforestKey = '{{ config['THUNDERFOREST_KEY'] }}';
     var gisPointAll = {{ gis_data['gisPointAll']|safe }};
+    var gisPointSuperId = {{ gis_data['gisPointSuperId'] }};
+    var gisPointSubIds = {{ gis_data['gisPointSubIds']|tojson }};
+    var gisPointSiblingIds = {{ gis_data['gisPointSiblingIds']|tojson }};
     var gisPointSelected = {{ gis_data['gisPointSelected']|safe }};
     var gisLineAll = {{ gis_data['gisLineAll']|safe }};
     var gisLineSelected = {{ gis_data['gisLineSelected']|safe }};
