--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -28,7 +28,7 @@
     {% else %}
         <p>
             {{ _('allowed extensions')|uc_first }}:
-            <span style="font-weight: bold;">{{ config['IMPORT_FILE_EXTENSIONS']|join(', ') }}</span> -
+            <span style="font-weight: bold;">csv</span> -
             {{ _('example files')|uc_first }}: <a href="/static/import/example.csv">example.csv</a>
         </p>
         {{ form|display_form|safe }}
