Added Veronika to team

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -65,6 +65,9 @@
     Christoph Hoffmann (Frontend Development)
 </p>
 <p>
+    Veronika Gründhammer (Project Administration)
+</p>
+<p>
     Jan Belik (Logo Design and Design Consulting)
 </p>
 <p>
@@ -85,6 +88,5 @@
     Petra Heinicker<br>
     Sandra Lehecka<br>
     Saranya Balasubramanian<br>
-    Veronika Gründhammer<br>
 </p>
 {% endblock %}
