--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -89,7 +89,7 @@
                 <form method="post" action="{{ url_for('search_index') }}" style="display: inline-flex">
                     {{ search_form.csrf_token }}
                     {{ search_form.term }}
-                    {{ search_form.search}}
+                    {{ search_form.search(class_="btn btn-secondary")}}
                 </form>
             </div>
         </div>
