--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -19,9 +19,12 @@
                     <a href="{{ url_for('profile_index') }}">{{ _('profile')|uc_first }}</a>.
                 </p>
             {% endif %}
-            {{ _('network')|uc_first }}: <a href="{{ url_for('model_network') }}">Classic</a> -
-            <a href="{{ url_for('model_network2', dimensions=2) }}">2D</a> -
-            <a href="{{ url_for('model_network2', dimensions=3) }}">3D</a>
+            <p>
+                {{ _('network visualization')|uc_first }}:
+                <a href="{{ url_for('model_network') }}">Classic</a> -
+                <a href="{{ url_for('model_network2', dimensions=2) }}">2D</a> -
+                <a href="{{ url_for('model_network2', dimensions=3) }}">3D</a>
+            </p>
             <p style="font-size:0.9em;">
                 {% if session['login_previous_success'] %}
                     {{ _('last login')|uc_first }}: {{ session['login_previous_success'] }}
