--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -22,8 +22,8 @@
             <p>
                 {{ _('network visualization')|uc_first }}:
                 <a href="{{ url_for('model_network') }}">Classic</a> -
-                <a href="{{ url_for('model_network2', dimensions=2) }}">2D</a> -
-                <a href="{{ url_for('model_network2', dimensions=3) }}">3D</a>
+                <a href="{{ url_for('model_network', dimensions=2) }}">2D</a> -
+                <a href="{{ url_for('model_network', dimensions=3) }}">3D</a>
             </p>
             <p style="font-size:0.9em;">
                 {% if session['login_previous_success'] %}
